<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:id="@+id/recyclerViewCart"/>

    <EditText
        android:id="@+id/et_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Set delivery address"
        android:clickable="true"/>

    <Button
        android:id="@+id/bt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get current location"
        android:background="@color/primary_light"/>

    <Button
        android:id="@+id/buttonCash"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="Cash on delivery" />
    <FrameLayout
        android:id="@+id/wallet_button_holder"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal" /> >
    <Button
        android:layout_width="200dp"

        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:text="Confirm card payment"
       android:id="@+id/bt_Confirm" />




</LinearLayout>